2022/5/31 搜索栏功能添加

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -18,6 +18,10 @@ body {
   background-color: #f3f3f3;
 }
 
+.flex {
+  display: flex;
+}
+
 .flex-space-between {
   @include flex(space-between, center, row);
 }
